refactory and fix bug in output stream.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
-Developers:
+SpriteMapper Developers:
+
+    * Huan Du <i@huandu.me>
+
+Original Author:
 
     * Robert Larsen <robert@komogvind.dk>
-    * Huan Du <i@huandu.me> (Current maintainer)
